--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,13 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Training Agents for Panopticon"
+
+[preprocessor]
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output]
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
